<resources>
    <string name="app_name">TestovaciaApp</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title">Welcome</string>
    <string name="subtitle">This will get edited</string>
    <string name="click">Click me!</string>
    <string name="doNotClick">Don\'t click me!</string>
    <string name="typeHere">Type here some text!</string>
    <string name="typeName">Type name!</string>
    <string name="toastIt">Toast it!</string>
    <string name="changeName">Name it!</string>
</resources>
